--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+@import "node_modules/bootstrap/scss/bootstrap";
+@import '_customVariables';
+@import 'main';
