--- a/src/main.scss
+++ b/src/main.scss
@@ -2,5 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+  background: url('images/homepage-main-background.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
