added some components

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -11,4 +11,9 @@ header {
     background: url('../images/sprite_v1.svg') -153px -28px no-repeat;
   }
 
+  .customer-data {
+    float: right;
+    padding: 10px;
+  }
+
 }
