added some css styles for AddToBalance

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -3,6 +3,12 @@ header {
   padding-top: 20px;
   padding-bottom: 20px;
 
+  &:after {
+    display: block;
+    content: '';
+    clear: both;
+  }
+
   .logo {
     float: left;
     width: 105px;
