--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 
-  background: url('images/homepage-main-background.jpg') no-repeat center center fixed; 
+  background: url('../images/homepage-main-background.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
