--- a/src/components/search.scss
+++ b/src/components/search.scss
@@ -1,5 +1,5 @@
 @import "../../node_modules/bootstrap/scss/functions";
-@import '../_customVariables.scss';
+@import '../sass/_customVariables.scss';
 
 .input-box-container {
   position: absolute;
