added font awesome and few icons to the project

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -8,6 +8,16 @@
   max-width: 500px;
   margin: 0 auto;
 
+  .amount {
+    font-size: 30px;
+    font-weight: normal;
+
+    b{
+      font-size: 1.7em;
+      font-weight: normal;
+    }
+  }
+
   .nav {
     padding: 20px 20px 0px 20px;
   }
