--- a/src/components/tabs.scss
+++ b/src/components/tabs.scss
@@ -6,6 +6,13 @@
   .nav-item {
     width: 50%;
     text-align: center;
+
+    a {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      font-size: $font-size-lg;
+    }
+
   }
 
 }
